unpackaged/main/default/objects/Account/fields/auto_test__c.field-meta.xml
<CustomField>
    <fullName>auto_test__c</fullName>
    <label>auto test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>