unpackaged/main/default/objects/Account/fields/Bug_fix_1__c.field-meta.xml
<CustomField>
    <fullName>Bug_fix_1__c</fullName>
    <label>Bug fix 1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>