unpackaged/main/default/objects/Account/fields/demo2_text__c.field-meta.xml
<CustomField>
    <fullName>demo2_text__c</fullName>
    <label>demo2-text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>