unpackaged/main/default/objects/Account/fields/demo_email__c.field-meta.xml
<CustomField>
    <fullName>demo_email__c</fullName>
    <label>demo-email</label>
    <type>Email</type>
</CustomField>