unpackaged/main/default/objects/Account/fields/Devops_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Devops_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Devops Checkbox</label>
    <type>Checkbox</type>
</CustomField>