unpackaged/main/default/objects/Account/fields/Kalpana__c.field-meta.xml
<CustomField>
    <fullName>Kalpana__c</fullName>
    <description>test 1</description>
    <label>Kalpana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>