unpackaged/main/default/objects/Account/fields/Mandeep1__c.field-meta.xml
<CustomField>
    <fullName>Mandeep1__c</fullName>
    <label>Mandeep1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>