unpackaged/main/default/objects/Account/fields/mandeep__c.field-meta.xml
<CustomField>
    <fullName>mandeep__c</fullName>
    <label>mandeep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>