unpackaged/main/default/objects/Account/fields/MANDEEP_A__c.field-meta.xml
<CustomField>
    <fullName>MANDEEP_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MANDEEP-A</label>
    <type>Checkbox</type>
</CustomField>