unpackaged/main/default/objects/Account/fields/MANDEEP_B__c.field-meta.xml
<CustomField>
    <fullName>MANDEEP_B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MANDEEP-B</label>
    <type>Checkbox</type>
</CustomField>