unpackaged/main/default/objects/Account/fields/MANDEEP_C__c.field-meta.xml
<CustomField>
    <fullName>MANDEEP_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MANDEEP-C</label>
    <type>Checkbox</type>
</CustomField>