unpackaged/main/default/objects/Account/fields/mandeep_d__c.field-meta.xml
<CustomField>
    <fullName>mandeep_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep-d</label>
    <type>Checkbox</type>
</CustomField>