unpackaged/main/default/objects/Account/fields/mandeep_e__c.field-meta.xml
<CustomField>
    <fullName>mandeep_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep-e</label>
    <type>Checkbox</type>
</CustomField>