unpackaged/main/default/objects/Account/fields/mandeep_f__c.field-meta.xml
<CustomField>
    <fullName>mandeep_f__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep-f</label>
    <type>Checkbox</type>
</CustomField>