unpackaged/main/default/objects/Account/fields/mandeepMann__c.field-meta.xml
<CustomField>
    <fullName>mandeepMann__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeepMann</label>
    <type>Checkbox</type>
</CustomField>