unpackaged/main/default/objects/Account/fields/refresh__c.field-meta.xml
<CustomField>
    <fullName>refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>refresh</label>
    <type>Checkbox</type>
</CustomField>