unpackaged/main/default/objects/Account/fields/Test123__c.field-meta.xml
<CustomField>
    <fullName>Test123__c</fullName>
    <label>Test123</label>
    <length>20</length>
    <type>Text</type>
</CustomField>