unpackaged/main/default/objects/Account/fields/Venkata__c.field-meta.xml
<CustomField>
    <fullName>Venkata__c</fullName>
    <label>Venkata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>